Fixed input qty
